--- a/api/.env
+++ b/api/.env
@@ -1,5 +1,12 @@
 #database connection
+dbHost = "bwdtoy4pebpmvpishick-mysql.services.clever-cloud.com"
+dbName = "bwdtoy4pebpmvpishick"
+dbUser = "ujpdfcqfrsnunkip"
+dbPwd = "SDaxbvIjOWZc3fQD4Dg7"
 
 #application
+appName = "Challenger"
+PORT = 3017
 
 #jwt: secret key
+SECRET_KEY = "yessir!"
